syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.zeaho.proto.water";
option java_outer_classname = "WaterProto";
option objc_class_prefix = "HLW";

package water;

service WaterCompany {
  rpc BuyStreamWater (WaterRequest) returns (stream WaterReply) {}
  rpc BuyWater (WaterRequest) returns (WaterReply) {}
}

message WaterRequest {
  float price = 1;
}

message WaterReply {
  string message = 1;
}